--- a/scss/_global-variables.scss
+++ b/scss/_global-variables.scss
@@ -1,8 +1,8 @@
-$luxbar-height: 58px !default;
-$luxbar-breakpoint: 768px !default;
-$luxbar-padding: 18px 24px 18px 24px !default;
+$luxbar-height: 3.625rem !default;
+$luxbar-breakpoint: 48rem !default;
+$luxbar-padding: 1.125rem 1.5rem 1.125rem 1.5rem !default;
 $luxbar-transition: .6s ease !default;
-$hamburger-line-height: 2px !default;
-$hamburger-width: 26px !default;
-$luxbar-shadow: 0 1px 3px rgba(#000, .12), 0 1px 2px rgba(#000, .24) !default;
+$hamburger-line-height: 0.125rem !default;
+$hamburger-width: 1.625rem !default;
+$luxbar-shadow: 0 0.063rem 0.188rem rgba(#000, .12), 0 0.063rem 0.125rem rgba(#000, .24) !default;
 $luxbar-css-prefix: 'luxbar' !default;
