--- a/scss/_non-mobile.scss
+++ b/scss/_non-mobile.scss
@@ -43,7 +43,7 @@
             display: none;
 
             .#{$luxbar-css-prefix}-item {
-                padding: 5px 10px;
+                padding: 0.313rem 0.625rem;
 
                 a {
                     white-space: nowrap;
