Prepend dropdown class name to be consisten.

--- a/scss/_non-mobile.scss
+++ b/scss/_non-mobile.scss
@@ -30,7 +30,7 @@
         margin-right: auto;
     }
 
-    .dropdown {
+    .#{$luxbar-css-prefix}-dropdown {
         height: $luxbar-height;
 
         &:hover > ul {
