--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -122,7 +122,7 @@
     }
 }
 
-.dropdown {
+.#{$luxbar-css-prefix}-dropdown {
     position: relative;
     height: auto;
     min-height: $luxbar-height;
