Choose different default colors.

--- a/scss/_themes.scss
+++ b/scss/_themes.scss
@@ -2,12 +2,11 @@
 
 // ******* color variables *******
 :root {
-    --luxbar-color-bg: #006064;
-    --luxbar-color-hl: #00838f;
+    --luxbar-color-bg: #3e63ad;
+    --luxbar-color-hl: #2d477d;
     --luxbar-color-fg: #fff;
 }
 
-// ******* default dark *******
 .#{$luxbar-css-prefix}-menu,
 .#{$luxbar-css-prefix}-menu .#{$luxbar-css-prefix}-dropdown ul {
     background-color: var(--luxbar-color-bg);
