--- a/scss/_global-variables.scss
+++ b/scss/_global-variables.scss
@@ -1,8 +1,17 @@
-$luxbar-height: 3.625rem !default;
-$luxbar-breakpoint: 48rem !default;
-$luxbar-padding: 1.125rem 1.5rem 1.125rem 1.5rem !default;
-$luxbar-transition: .6s ease !default;
-$hamburger-line-height: 0.125rem !default;
-$hamburger-width: 1.625rem !default;
-$luxbar-shadow: 0 0.063rem 0.188rem rgba(#000, .12), 0 0.063rem 0.125rem rgba(#000, .24) !default;
+/* customizable custom properties */
+:root {
+    --luxbar-color-bg: #3e63ad;
+    --luxbar-color-hl: #2d477d;
+    --luxbar-color-fg: #fff;
+    --luxbar-height: 3.625rem;
+    --luxbar-padding: 1.125rem 1.5rem 1.125rem 1.5rem;
+    --luxbar-transition: .6s ease;
+    --luxbar-hamburger-line-height: 0.125rem;
+    --luxbar-hamburger-width: 1.625rem;
+    --luxbar-shadow: 0 0.063rem 0.188rem rgba(#000, .12), 0 0.063rem 0.125rem rgba(#000, .24);
+    --luxbar-expand-arrow-height: 0.313rem;
+}
+
+/* can't use custom property for these */
 $luxbar-css-prefix: 'luxbar' !default;
+$luxbar-breakpoint: 768px;
