Prepend active class for consistency.

--- a/scss/_themes.scss
+++ b/scss/_themes.scss
@@ -7,7 +7,7 @@
 }
 
 .#{$luxbar-css-prefix}-menu {
-    .active,
+    .#{$luxbar-css-prefix}-active,
     li:hover {
         background-color: var(--luxbar-color-hl);
     }
