--- a/scss/luxbar.scss
+++ b/scss/luxbar.scss
@@ -1,6 +1,5 @@
 @import 'global-variables';
-@import 'modes';
 @import 'mobile';
 @import 'non-mobile';
 @import 'hamburger-animation';
-@import 'themes';
+@import 'theme';
