--- a/scss/_hamburger-animation.scss
+++ b/scss/_hamburger-animation.scss
@@ -1,17 +1,9 @@
-#luxbar-checkbox {
-    &:checked {
-        + .luxbar-menu {
-            .luxbar-hamburger {
-                span {
-                    &::before {
-                        transform: rotate(45deg);
-                    }
+#luxbar-checkbox:checked + .luxbar-menu .luxbar-hamburger span {
+    &::before {
+        transform: rotate(45deg);
+    }
 
-                    &::after {
-                        transform: rotate(-45deg);
-                    }
-                }
-            }
-        }
+    &::after {
+        transform: rotate(-45deg);
     }
 }
