--- a/css/_mobile.css
+++ b/css/_mobile.css
@@ -48,7 +48,7 @@
 .luxbar-navigation li {
     height: var(--luxbar-height);
 
-    a {
+    & a {
         padding: var(--luxbar-padding);
         display: block;
     }
@@ -59,14 +59,13 @@
     position: relative;
     cursor: pointer;
 
-    span {
+    & span {
         display: block;
         height: var(--luxbar-hamburger-line-height);
         width: var(--luxbar-hamburger-width);
         transition: var(--luxbar-transition);
 
-        &::before,
-        &::after {
+        &::before, &::after {
             display: block;
             height: var(--luxbar-hamburger-line-height);
             width: var(--luxbar-hamburger-width);
@@ -85,41 +84,10 @@
     }
 }
 
-#luxbar-checkbox {
-    display: none;
-
-    &:not(:checked) ~ .luxbar-menu {
-        overflow: hidden;
-        height: var(--luxbar-height);
-    }
-
-    &:checked ~ .luxbar-menu {
-        transition: height var(--luxbar-transition);
-        height: 100vh;
-        overflow: auto;
-
-        li {
-            .luxbar-hamburger span {
-                background-color: transparent;
-
-                &::before,
-                &::after {
-                    margin-top: 0;
-                }
-            }
-        }
-    }
-}
-
 .luxbar-dropdown {
     position: relative;
     height: auto;
     min-height: var(--luxbar-height);
-
-    &:hover > ul {
-        position: relative;
-        display: block;
-    }
 
     > a::after {
         position: absolute;
@@ -136,8 +104,39 @@
         list-style: none;
         padding: 0;
 
-        li {
+        & li {
             padding: 0 0.625rem 0 var(--luxbar-height);
+        }
+    }
+
+    &:hover > ul {
+        position: relative;
+        display: block;
+    }
+}
+
+#luxbar-checkbox {
+    display: none;
+
+    &:not(:checked) ~ .luxbar-menu {
+        overflow: hidden;
+        height: var(--luxbar-height);
+    }
+
+    &:checked ~ .luxbar-menu {
+        transition: height var(--luxbar-transition);
+        height: 100vh;
+        overflow: auto;
+
+        & li {
+            .luxbar-hamburger span {
+                background-color: transparent;
+
+                &::before,
+                &::after {
+                    margin-top: 0;
+                }
+            }
         }
     }
 }
