Fix some minor issues from linting.

--- a/css/_non-mobile.css
+++ b/css/_non-mobile.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 768px) {
+@media screen and (width > 768px) {
     .luxbar-navigation {
         flex-flow: row;
         justify-content: flex-end;
